# tariffs-xml-parser-validator

./: tariffs-xml-parser-validator.cabal
sample-data/: tariffs.dtd  tariffs.xml
src/: Main.hs  Tariffs.hs
test/: Main.hs
