name: tariffs-xml-parser-validator
version: 0.0.1
cabal-version: 1.22
build-type: Simple
license: BSD3
copyright: (c) Artem Tsushko, 2015
maintainer: artem.tsushko@gmail.com
stability: provisional
synopsis: initializes a list of objects with information from an XML file, validates the file over DTD or XSD
description:

author: Artem Tsushko

executable tariffs-xml-parser-validator
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        doctest -any,
        HaXml
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -ferror-spans

test-suite test-tariffs-xml-parser-validator
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        doctest -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -ferror-spans
